# djangoBackend

./: Pipfile  README.md
demo/: db.sqlite3  pyproject.toml  requirements.txt  trained_model.pkl
demo/demo/: settings.py  urls.py
demo/models/: model_English_grade1_final_score_test_score.pkl  model_English_grade1_final_score_test_score_homework_score.pkl  model_English_grade1_final_score_test_score_homework_score_attendance.pkl  model_English_grade2_final_score_test_score.pkl  model_English_grade2_final_score_test_score_homework_score.pkl  model_English_grade2_final_score_test_score_homework_score_attendance.pkl  model_Maths_grade2_final_score_test_score.pkl  model_Maths_grade2_final_score_test_score_homework_score.pkl  model_Maths_grade2_final_score_test_score_homework_score_attendance.pkl  model_Nepali_grade10_final_score_test_score_homework_score.pkl  model_Nepali_grade1_final_score_['test_score', 'attendance'].pkl  model_Nepali_grade1_final_score_test_score.pkl  model_Nepali_grade1_final_score_test_score_homework_score.pkl  model_Nepali_grade1_final_score_test_score_homework_score_attendance.pkl  model_Nepali_grade2_final_score_['test_score', 'homework_score'].pkl  model_Nepali_grade2_final_score_test_score_homework_score_attendance.pkl  model_Nepali_grade3_final_score_test_score_homework_score.pkl  model_Nepali_grade4_final_score_test_score_homework_score.pkl  model_Nepali_grade5_final_score_test_score_homework_score.pkl  model_Nepali_grade6_final_score_test_score_homework_score.pkl  model_Nepali_grade7_final_score_test_score_homework_score.pkl  (+3 more)
(+45 files in other folders)
