[tool.poetry]
name = "django-backend"
version = "0.1.0"
description = "EduManager backend"
authors = ["Vivek <vivek@example.com>"]
packages = [{ include = "demo" }]

[tool.poetry.dependencies]
python = "^3.12"
Django = "5.2"
djangorestframework = "3.16.0"
djangorestframework_simplejwt = "5.5.0"
django-cors-headers = "4.7.0"
django-extensions = "4.1"
numpy = "2.2.5"
pandas = "2.2.3"
PyJWT = "2.9.0"
python-dateutil = "2.9.0.post0"
pytz = "2025.2"
scikit-learn = "1.6.1"
scipy = "1.15.2"
six = "1.17.0"
sqlparse = "0.5.3"
threadpoolctl = "3.6.0"
tzdata = "2025.2"
joblib = "1.4.2"
gunicorn = "23.0.0"
dj-database-url = "3.0.1"
psycopg2-binary = "2.9.11"
Pillow = "10.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"